--- a/NewApp/ios/NewApp/Info.plist
+++ b/NewApp/ios/NewApp/Info.plist
@@ -37,8 +37,46 @@
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Jost-Black.ttf</string>
+		<string>Jost-BlackItalic.ttf</string>
+		<string>Jost-Bold.ttf</string>
+		<string>Jost-BoldItalic.ttf</string>
+		<string>Jost-ExtraBold.ttf</string>
+		<string>Jost-ExtraBoldItalic.ttf</string>
+		<string>Jost-ExtraLight.ttf</string>
+		<string>Jost-ExtraLightItalic.ttf</string>
+		<string>Jost-Italic-VariableFont_wght.ttf</string>
+		<string>Jost-Italic.ttf</string>
+		<string>Jost-Light.ttf</string>
+		<string>Jost-LightItalic.ttf</string>
+		<string>Jost-Medium.ttf</string>
+		<string>Jost-MediumItalic.ttf</string>
+		<string>Jost-Regular.ttf</string>
+		<string>Jost-SemiBold.ttf</string>
+		<string>Jost-SemiBoldItalic.ttf</string>
+		<string>Jost-Thin.ttf</string>
+		<string>Jost-ThinItalic.ttf</string>
+		<string>Jost-VariableFont_wght.ttf</string>
+		<string>AntDesign.ttf</string>
+		<string>Entypo.ttf</string>
+		<string>EvilIcons.ttf</string>
+		<string>Feather.ttf</string>
+		<string>FontAwesome.ttf</string>
+		<string>FontAwesome5_Brands.ttf</string>
+		<string>FontAwesome5_Regular.ttf</string>
+		<string>FontAwesome5_Solid.ttf</string>
+		<string>Foundation.ttf</string>
+		<string>Ionicons.ttf</string>
+		<string>MaterialIcons.ttf</string>
+		<string>MaterialCommunityIcons.ttf</string>
+		<string>SimpleLineIcons.ttf</string>
+		<string>Octicons.ttf</string>
+		<string>Zocial.ttf</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
+	<string>LaunchScreen.storyboard</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
