--- a/NewApp/package.json
+++ b/NewApp/package.json
@@ -19,11 +19,14 @@
     "@tanstack/react-query": "^4.24.10",
     "axios": "^1.3.4",
     "i18next": "^22.4.10",
+    "lottie-ios": "3.4.0",
+    "lottie-react-native": "^5.1.5",
     "react": "18.2.0",
     "react-i18next": "^12.2.0",
     "react-native": "0.71.3",
     "react-native-flipper": "^0.182.0",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-reanimated": "^2.14.4",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
